Add logs, refactor pom.xml